<resources>
    <string name="app_name">Chef Ya!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_subirplato">Subir plato</string>
    <string name="nav_mensajes">Mensajes</string>
    <string name="nav_misreservas">Mis reservas</string>
    <string name="nav_misplatos">Mis platos</string>
    <string name="nav_configuracion">Configuracion</string>
    <string name="nav_acerda_de">Acerca de</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_registro">"Registro "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>

    <string name="drawer_open">Abriendo menu</string>
    <string name="drawer_close">Cerrando menu</string>
    <string name="desayunos">Desayunos</string>
    <string name="meriendas">Meriendas</string>
    <string name="comidas">Comidas</string>
    <string name="cenas">Cenas</string>
    <string name="todos">Todos</string>
    <string name="extras">Extras</string>
    <string name="title_activity_maps">Map</string>
    <string name="password">contraseña</string>
    <string name="usuario">usuario</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="title_activity_mapa">Mapa de platos</string>

</resources>
