<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/groupCategoria"
        android:checkableBehavior="single">
        <item android:id="@+id/itemTodos"
            android:title="@string/todos"
            android:checked="true"/>
        <item android:id="@+id/itemDesayunos"
            android:title="@string/desayunos"/>
        <item android:id="@+id/itemComidas"
            android:title="@string/comidas"/>
        <item android:id="@+id/itemMeriendas"
            android:title="@string/meriendas"/>
        <item android:id="@+id/itemCenas"
            android:title="@string/cenas"/>
    </group>
    <item android:id="@+id/itemExtras"
        android:title="@string/extras"/>

</menu>
